[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sounds/PowerUp.wav" type="AudioStream" id=1]
[ext_resource path="res://Sprites/GunPowerUp.png" type="Texture" id=2]
[ext_resource path="res://Templates/PowerUp.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28.5633, 27.9923 )

[node name="PowerUp" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="PowerUp" type="Sprite" parent="."]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )

[node name="CollisionArea" type="Area2D" parent="."]

[node name="HitBox" type="CollisionShape2D" parent="CollisionArea"]
shape = SubResource( 1 )

[node name="Notifier" type="VisibilityNotifier2D" parent="."]

[node name="PowerUpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -20.0
